examples/kubectl/nfs/namespaces.yaml
---
# Set your context
# $ kubectl config view
# $ kubectl config current-context
#
# You can permanently save the namespace for all subsequent kubectl commands in that context.
# $ kubectl config set-context $(kubectl config current-context) --namespace=<insert-namespace-name-here>
#
# Validate it
# $ kubectl config view | grep namespace:
# $ kubectl config set-context dev --namespace=development \
#   --cluster=<name-found-in-config-view> \
#   --user=<user-found-in-config-view>
# Or,
# $ kubectl get pods -o wide --namespace=<insert-namespace-name-here>
# $ kubectl get pods -o wide --all-namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: autostructure-development
  # labels:
  #   name: autostructure-development
