examples/kubectl/nfs/nfs-server.yaml
---
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: nfs-server
  labels:
    role: nfs-server
spec:
  tolerations:
  - key: node-role.kubernetes.io/nfs-server
    effect: NoSchedule
  nodeSelector:
    node-role.kubernetes.io/nfs-server: "nfs-server"
  restartPolicy: Always
  containers:
  - name: nfs-server
    image: gcr.io/google_containers/volume-nfs:0.8
    securityContext:
      privileged: true
    ports:
      - name: nfs-0
        containerPort: 2049
        protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  namespace: autostructure-development
  name: nfs-server
  labels:
    role: nfs-server
spec:
  tolerations:
  - key: node-role.kubernetes.io/nfs-server
    effect: NoSchedule
  nodeSelector:
    node-role.kubernetes.io/nfs-server: "nfs-server"
  restartPolicy: Always
  containers:
  - name: nfs-server
    image: gcr.io/google_containers/volume-nfs:0.8
    securityContext:
      privileged: true
    ports:
      - name: nfs-0
        containerPort: 2049
        protocol: TCP
