examples/kubectl/nfs/nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: autostructure-development
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-nfs-vol-001
          persistentVolumeClaim:
            claimName: nfs-claim-3g
      containers:
        - name: nginx
          image: nginx:1.15.4
          ports:
            - containerPort: 80
              name: nginx-port
          volumeMounts:
            - name: nginx-nfs-vol-001
              mountPath: /usr/share/nginx/html
