examples/kubectl/nfs/ingress-controller.yaml
---
# create an ingress-controller in both the
# default & autostructure-development namespaces.
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-ingress-controller
spec:
  type: NodePort
  selector:
    app: inginx-ingress-controller
  ports:
  - name: http
    port: 80
    nodePort: 34444
  - name: https
    port: 443
    nodePort: 34443
  - name: http-mgmt
    port: 18080
    nodePort: 34188
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: nginx-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inginx-ingress-controller
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0
        name: nginx-ingress-controller
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 18080
            name: http-mgmt
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        args:
        - /ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/nginx-ingress-default-backend
---
apiVersion: v1
kind: Service
metadata:
  namespace: autostructure-development
  name: nginx-ingress-controller
spec:
  type: NodePort
  selector:
    app: inginx-ingress-controller
  ports:
  - name: http
    port: 80
    nodePort: 34445
  - name: https
    port: 443
    nodePort: 34446
  - name: http-mgmt
    port: 18080
    nodePort: 34189
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: autostructure-development
  name: nginx-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inginx-ingress-controller
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0
        name: nginx-ingress-controller
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 18080
            name: http-mgmt
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        args:
        - /ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/nginx-ingress-default-backend
