examples/kubectl/nfs/nginx-service.yaml
---
# kubectl expose deployment/nginx-deployment
# or...
# kubectl create -f nginx-service.yaml
# Valid nodePort rangesThe range of valid ports is 32768-35535
apiVersion: v1
kind: Service
metadata:
  # namespace: autostructure-lab
  name: nginx-service
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 33080
    protocol: TCP
    name: http
  selector:
    app: nginx
