examples/kubectl/nfs/ingress-resource-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # - http:
  #     paths:
  #     - path: /ingress-autostructure
  #       backend:
  #         serviceName: nginx-service
  #         servicePort: 80
  # - host: www.mysite.com
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: website
  #         servicePort: 80
